--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -30,7 +30,7 @@
 # 降低一些几乎只在一个固定词汇中使用的读音的权重，不让其参与注音，在 base 中手动注音。
 ---
 name: 8105
-version: "2023-03-19"
+version: "2023-03-29"
 sort: by_weight
 vocabulary: essay-zh-hans
 ...
@@ -1147,7 +1147,7 @@ vocabulary: essay-zh-hans
 骀	dai	79
 轪	dai	39
 垈	dai	0
-但	dan	3505257
+但	dan	7505257
 单	dan	738919
 淡	dan	518865
 担	dan	442662
@@ -1198,8 +1198,8 @@ vocabulary: essay-zh-hans
 𣗋	dang	0
 𬍡	dang	0
 到	dao	11505436
-道	dao	10625536
 倒	dao	1085421
+道	dao	1062553
 刀	dao	723425
 导	dao	486193
 岛	dao	186833
@@ -4518,6 +4518,7 @@ vocabulary: essay-zh-hans
 廿	nian	3123
 辇	nian	2547
 鲇	nian	681
+鲶	nian	680
 埝	nian	101
 粘	nian	1
 娘	niang	603856
@@ -5644,6 +5645,7 @@ vocabulary: essay-zh-hans
 晟	sheng	15923
 甥	sheng	7427
 昇	sheng	577
+乘	sheng	333
 嵊	sheng	242
 眚	sheng	119
 陞	sheng	42
