--- a/default.yaml
+++ b/default.yaml
@@ -1,28 +1,38 @@
 # Rime default settings
 # encoding: utf-8
 
-config_version: "2023-04-09"
+config_version: '0.40'
 
 schema_list:
-  - schema: lufs_flypy # 小鹤双拼
-  - schema: lufs_pinyin # 朙月拼音
+  - schema: luna_pinyin
+  - schema: luna_pinyin_simp
+  - schema: luna_pinyin_fluency
+  - schema: bopomofo
+  - schema: bopomofo_tw
+  - schema: cangjie5
+  - schema: stroke
+  - schema: terra_pinyin
 
 switcher:
-  caption: "[方案菜单]"
+  caption: 〔方案選單〕
   hotkeys:
-    - F2
+    - Control+grave
+    - Control+Shift+grave
+    - F4
   save_options:
-    - ascii_mode
     - full_shape
     - ascii_punct
-    - traditionalization
-    - emoji_suggestion
-  fold_options: true # 折叠选项
-  abbreviate_options: true # 简化选项
-  option_list_separator: "/"
+    - simplification
+    - extended_charset
+    - zh_hant
+    - zh_hans
+    - zh_hant_tw
+  fold_options: true
+  abbreviate_options: true
+  option_list_separator: '／'
 
 menu:
-  page_size: 4
+  page_size: 5
 
 punctuator:
   full_shape:
@@ -30,53 +40,27 @@ punctuator:
   half_shape:
     __include: punctuation:/half_shape
 
-ascii_composer:
-  good_old_caps_lock: false
-  switch_key:
-    Shift_L: noop
-    Shift_R: commit_code # macOS 上此项无效，Windows 可用右 Shift 切换中英输入
-    Control_L: noop
-    Control_R: noop # macOS 上此项无效，Windows 上可自行定义
-    Caps_Lock: commit_code
-    Eisu_toggle: clear
-
 key_binder:
-  select_first_character: "bracketleft" # lua 选词快捷键，选第一个字
-  select_last_character: "bracketright" # lua 选词快捷键，选最后一个字
-
   bindings:
-    # 翻页
-    - { when: paging, accept: Tab, send: Page_Down } # Tab 向下翻页
-    - { when: paging, accept: Shift+Tab, send: Page_Up } # Shift + Tab 向上翻页
+    __patch:
+      - key_bindings:/emacs_editing
+      - key_bindings:/move_by_word_with_tab
+      - key_bindings:/paging_with_minus_equal
+      - key_bindings:/paging_with_comma_period
+      - key_bindings:/numbered_mode_switch
 
-    - { when: paging, accept: equal, send: Page_Down } # = 向下翻页
-    - { when: paging, accept: minus, send: Page_Up } # - 向上翻页
+recognizer:
+  patterns:
+    email: "^[A-Za-z][-_.0-9A-Za-z]*@.*$"
+    uppercase: "[A-Z][-_+.'0-9A-Za-z]*$"
+    url: "^(www[.]|https?:|ftp[.:]|mailto:|file:).*$|^[a-z]+[.].+$"
 
-    # 需要注释掉部分冲突的正则匹配才可用，详情见: https://github.com/LufsX/rime/issues/15#issuecomment-1496011933
-    # - { when: paging, accept: period, send: Page_Down } # 句号向下翻页
-    # - { when: paging, accept: comma, send: Page_Up } # 逗号向上翻页
-
-    # 失效设置，可通过关闭/更改 lua 选词的快捷键恢复
-    # - { when: paging, accept: bracketright, send: Page_Down } # 右括号向下翻页
-    # - { when: paging, accept: bracketleft, send: Page_Up } # 左括号向上翻页
-
-    # 候选操作
-    - { when: has_menu, accept: semicolon, send: 2 } # 输入时「;」二选
-    - { when: has_menu, accept: Control+1, send: 3 } # 输入时「'」三选哈昂
-
-    # Rime key bindings
-    # emacs_editing
-    # - { when: composing, accept: Control+p, send: Up }
-    # - { when: composing, accept: Control+n, send: Down }
-    # - { when: composing, accept: Control+b, send: Left }
-    # - { when: composing, accept: Control+f, send: Right }
-    # - { when: composing, accept: Control+a, send: Home }
-    # - { when: composing, accept: Control+e, send: End }
-    # - { when: composing, accept: Control+d, send: Delete }
-    # - { when: composing, accept: Control+k, send: Shift+Delete }
-    # - { when: composing, accept: Control+h, send: BackSpace }
-    # - { when: composing, accept: Control+g, send: Escape }
-    # - { when: composing, accept: Control+bracketleft, send: Escape }
-    # - { when: composing, accept: Control+y, send: Page_Up }
-    # - { when: composing, accept: Alt+v, send: Page_Up }
-    # - { when: composing, accept: Control+v, send: Page_Down }
+ascii_composer:
+  good_old_caps_lock: true
+  switch_key:
+    Shift_L: inline_ascii
+    Shift_R: commit_text
+    Control_L: noop
+    Control_R: noop
+    Caps_Lock: clear
+    Eisu_toggle: clear
